compiler/tests/fa/errors/pure_void.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
خالص تابع هیچ(مقدار : صحیح):
    مقدار۲ := مقدار
پایان

تابع اصلی:
    هیچ(1)
پایان
